# rse-grand-challenge-dicom-de-id-procedure

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  SOP.md  index.js  package-lock.json  package.json  pyproject.toml  rollup.config.js  setup.cfg
.github/: ci.yml  release.yml
dicom_deid/: build_base_procedure.py  build_candidate_procedure.py  build_final_procedure.py  checksum.py  generate_standard_profile.py  procedure_generation.py  render.py  standard_profile.py  update_worklist.py
dicom_deid/dicom_standard/: README.md  attributes.json  ciod_to_func_group_macros.json  ciod_to_modules.json  ciods.json  confidentiality_profile_attributes.json  macros.json  modules.json  sops.json  version.json
procedure/: MANUAL_WORKLIST.rts  base.json  candidate.json  manual.json
procedure/manual-human/ct-image/: 0_All.rst  AcquisitionNumber.rts  AnatomicalOrientationType.rts  CTDIvol.rst  CodingSchemeExternalID.rst  CodingSchemeRegistry.rts  DICOMMediaRetrievalSequence.rst  DICOMMediaRetrievalSequence.rts  DICOMRetrievalSequence.rst  DICOMRetrievalSequence.rts  DeviceAlternateIdentifierFormat.rts  DeviceAlternateIdentifierType.rst  DeviceAlternateIdentifierType.rts  DeviceSerialNumber.rst  DistanceSourceToPatient.rst  DoubleFloatRealWorldValueFirstValueMapped.rts  EquipmentFrameOfReferenceUID.rst  EquipmentFrameOfReferenceUID.rts  Exposure.rst  ExposureTime.rst  ExtendedOffsetTableLengths.rts  FilterMaterial.rst  FilterType.rst  (+38 more)
schemas/: procedure.json
tests/: test_dicom_standard.py  test_procedure_generation.py  test_standard_profile.py
(+7 files in other folders)
