[project]
name = "grand-challenge-dicom-deid-profile"
version = "0.20250708.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
profile = "black"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["dicom_deid"]
